force-app/main/default/objects/Payment_Info__c/Payment_Info__c.object-meta.xml
<CustomObject>
    <label>Payment Info</label>
    <nameField>
        <label>Payment Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>