force-app/main/default/objects/Payment_Info__c/fields/Bank_Deposit_ID__c.field-meta.xml
<CustomField>
    <fullName>Bank_Deposit_ID__c</fullName>
    <label>Bank Deposit ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>