force-app/main/default/objects/Payment_Info__c/fields/Batch_Name__c.field-meta.xml
<CustomField>
    <fullName>Batch_Name__c</fullName>
    <label>Batch Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>