force-app/main/default/objects/Payment_Info__c/fields/Billing_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_Id__c</fullName>
    <label>Billing Account Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>