force-app/main/default/objects/Payment_Info__c/fields/Billing_Number__c.field-meta.xml
<CustomField>
    <fullName>Billing_Number__c</fullName>
    <label>Billing Number</label>
    <type>Phone</type>
</CustomField>