force-app/main/default/objects/Payment_Info__c/fields/Payement_Rcvd_Date__c.field-meta.xml
<CustomField>
    <fullName>Payement_Rcvd_Date__c</fullName>
    <label>Payement Received Date</label>
    <type>Date</type>
</CustomField>