force-app/main/default/objects/Payment_Info__c/fields/Payment_Batch__c.field-meta.xml
<CustomField>
    <fullName>Payment_Batch__c</fullName>
    <label>Payment Batch</label>
    <length>25</length>
    <type>Text</type>
</CustomField>