force-app/main/default/objects/Payment_Info__c/fields/payment_seq_no__c.field-meta.xml
<CustomField>
    <fullName>payment_seq_no__c</fullName>
    <label>Payment sequence number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>