force-app/main/default/objects/Payment_Info__c/fields/Pending_Batch_ID__c.field-meta.xml
<CustomField>
    <fullName>Pending_Batch_ID__c</fullName>
    <label>Pending Batch ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>