force-app/main/default/objects/Payment_Info__c/fields/pending_cc_mem__c.field-meta.xml
<CustomField>
    <fullName>pending_cc_mem__c</fullName>
    <label>pending capital credit member</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>