force-app/main/default/objects/Payment_Info__c/fields/Pending_Pay_Amt__c.field-meta.xml
<CustomField>
    <fullName>Pending_Pay_Amt__c</fullName>
    <label>Pending Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>