force-app/main/default/objects/Payment_Info__c/fields/Pending_Pay_Type__c.field-meta.xml
<CustomField>
    <fullName>Pending_Pay_Type__c</fullName>
    <label>Pending Payment Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>