force-app/main/default/objects/Payment_Info__c/fields/Pending_Ref_No__c.field-meta.xml
<CustomField>
    <fullName>Pending_Ref_No__c</fullName>
    <label>Pending Ref Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>