force-app/main/default/objects/Payment_Info__c/fields/Post_Time__c.field-meta.xml
<CustomField>
    <fullName>Post_Time__c</fullName>
    <label>Post Time</label>
    <length>25</length>
    <type>Text</type>
</CustomField>