force-app/main/default/objects/Payment_Info__c/fields/Posted_Bill_with__c.field-meta.xml
<CustomField>
    <fullName>Posted_Bill_with__c</fullName>
    <label>Posted Bill with</label>
    <length>25</length>
    <type>Text</type>
</CustomField>