force-app/main/default/objects/Payment_Info__c/fields/Posted_By__c.field-meta.xml
<CustomField>
    <fullName>Posted_By__c</fullName>
    <label>Posted By</label>
    <length>25</length>
    <type>Text</type>
</CustomField>