force-app/main/default/objects/Payment_Info__c/fields/posted_cc_mno__c.field-meta.xml
<CustomField>
    <fullName>posted_cc_mno__c</fullName>
    <label>posted capital credit member number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>