force-app/main/default/objects/Payment_Info__c/fields/Posted_Pay_Date__c.field-meta.xml
<CustomField>
    <fullName>Posted_Pay_Date__c</fullName>
    <label>Posted Payment Date</label>
    <type>Date</type>
</CustomField>