force-app/main/default/objects/Payment_Info__c/fields/Posted_pay_type__c.field-meta.xml
<CustomField>
    <fullName>Posted_pay_type__c</fullName>
    <label>Posted payment type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>