force-app/main/default/objects/Payment_Info__c/fields/Posted_Ref_No1__c.field-meta.xml
<CustomField>
    <fullName>Posted_Ref_No1__c</fullName>
    <label>Posted Ref No</label>
    <length>225</length>
    <type>Text</type>
</CustomField>