force-app/main/default/objects/Payment_Info__c/fields/Posted_Ref_No__c.field-meta.xml
<CustomField>
    <fullName>Posted_Ref_No__c</fullName>
    <label>Posted Ref No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>