force-app/main/default/objects/Payment_Info__c/fields/sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>sequence_Number__c</fullName>
    <label>Sequence Number</label>
    <length>1</length>
    <type>Text</type>
</CustomField>